Single testimonial page created, styles added.

--- a/index.html
+++ b/index.html
@@ -5,65 +5,79 @@
 	<title>Testimonials</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="styles_index.css">
 </head>
 <body>
 	<header>
 		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-12">
-				<h1>Here goes the header!</h1>
+			<div class="col-sm-12 col-md-12 col-lg-12" id="social">
+				<br>
+				<br>
+			</div>
+			<div class="col-sm-12 col-md-12 col-lg-12" id="banner">
+				<br>
+				<br>
+				<br>
+				<br>
+			</div>
+			<div class="col-sm-12 col-md-12 col-lg-12" id="navbar">
+				<br>
+				<br>
 			</div>
 		</div>
 	</header>
+	<br>
+	<br>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-12">
+			<div class="col-sm-12 col-md-12 col-lg-12" id="banner">
 				<h1>Testimonials</h1>
-				<h2>Have you made a safe choice? <span>Share your story!</span></h2>
+				<h2>Have you made a safe choice? <span class="pink-message">Share your story!</span></h2>
 				<p>Every day, women all over the world choose to have safe abortions with pills. Some women prefer this method because they feel it is less invasive. Others prefer the method because they can use it in a familiar place, it is less expensive, more private – and safer. Whatever your reason for having an abortion with pills, we would love to hear from you about how it happened.  </p>
 				<p>Why not take five minutes to share your story. It may help other women understand the process and find the courage to choose safely.</p>
-				<h3>Check out the stories shared by women around the <br> world and by safe2choose’s users!</h3>
+				<h3 class="message">Check out the stories shared by women around the <br> world and by safe2choose’s users!</h3>
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-8">
 			<br>
 			<br>
 				<div class="col-sm-12 col-md-6 col-lg-6">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail" width="200" height="200">
-					<p>My experience was great...</p>
-					<button type="button" class="btn btn-default btn-sm">Read more!</button>
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<p class="txt">"My experience was great... "</p>
+					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail" width="200" height="200">
-					<p>My experience was great...</p>
-					<button type="button" class="btn btn-default btn-sm">Read more!</button>
-				</div>
-				<div class="col-sm-12 col-md-6 col-lg-6">
-				<br>
-				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail" width="200" height="200">
-					<p>My experience was great...</p>
-					<button type="button" class="btn btn-default btn-sm">Read more!</button>
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<p class="txt">"I'm happy to have discovered... "</p>
+					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 				<br>
 				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail" width="200" height="200">
-					<p>My experience was great...</p>
-					<button type="button" class="btn btn-default btn-sm">Read more!</button>
-				</div>
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<p class="txt">"I came across safe2choose website... "</p>
+					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>				
+					</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 				<br>
 				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail" width="200" height="200">
-					<p>My experience was great...</p>
-					<button type="button" class="btn btn-default btn-sm">Read more!</button>
-				</div>
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<p class="txt">"I decided to terminate my pregnancy... "</p>
+					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
+					</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 				<br>
 				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail" width="200" height="200">
-					<p>My experience was great...</p>
-					<button type="button" class="btn btn-default btn-sm">Read more!</button>
-				</div>
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<p class="txt">"Based on the pregnancy calculation... "</p>
+					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>				
+					</div>
+				<div class="col-sm-12 col-md-6 col-lg-6">
+				<br>
+				<br>
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<p class="txt">"One hour after taking the first doses... "</p>
+					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>				
+					</div>
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-4">
 				<div class="col-sm-12 col-md-12 col-lg-12">
@@ -72,7 +86,7 @@
 				<form>
 					<div class="form-group">
 						<label for="name">Name *</label>
-   			 			<input type="text" class="form-control" id="name">
+   			 			<input type="text" class="form-control" id="name" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="You don't need to provide your real name - you can use a pseudonym or nickname if you prefer.">
 					</div>
 					<div class="form-group">
 						<label for="age">Age *</label>
@@ -90,7 +104,7 @@
 					</div>
 					<div class="form-group">
 					    <label for="photo">Photo</label>
-					    <input type="file" id="photo">
+					    <input type="file" id="photo" lass="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Please upload a photo in one of the following formats: jpg, gif, png. Maximum file size is 4mb. No need to provide a photo of you - it can be an image or graphic that you feel represents you. And if you don't feel like sharing any photo, that's fine too. It's optional!">
   					</div>
   					<div class="form-group">
   						<label for="message">Message *</label>
@@ -108,9 +122,29 @@
 		</div>
 	</div>
 	<footer>
+	<br>
+	<br>
+	<br>
 		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-12">
-				<h1>Here goes the footer!</h1>
+			<div class="col-sm-12 col-md-12 col-lg-12" id="banner">
+				<br>
+				<br>
+				<br>
+				<br>
+			</div>
+			<div class="col-sm-12 col-md-12 col-lg-12" id="navbar">
+				<br>
+				<br>
+			</div>
+			<div class="col-sm-12 col-md-12 col-lg-12" id="social">
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
 			</div>
 		</div>		
 	</footer>
