Styles modified, feedback applied.

--- a/index.html
+++ b/index.html
@@ -30,56 +30,60 @@
 	<br>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-12" id="banner">
+			<div class="col-sm-12 col-md-12 col-lg-12 border_top_color" id="banner">
 				<h1>Testimonials</h1>
 				<h2>Have you made a safe choice? <span class="pink-message">Share your story!</span></h2>
 				<p>Every day, women all over the world choose to have safe abortions with pills. Some women prefer this method because they feel it is less invasive. Others prefer the method because they can use it in a familiar place, it is less expensive, more private – and safer. Whatever your reason for having an abortion with pills, we would love to hear from you about how it happened.  </p>
 				<p>Why not take five minutes to share your story. It may help other women understand the process and find the courage to choose safely.</p>
 				<h3 class="message">Check out the stories shared by women around the <br> world and by safe2choose’s users!</h3>
 			</div>
-			<div class="col-sm-12 col-md-12 col-lg-8">
+			<div class="col-sm-12 col-md-12 col-lg-12">
+				<br>
+				<br>
+			</div>
+			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color" id="banner">
 			<br>
 			<br>
 				<div class="col-sm-12 col-md-6 col-lg-6">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
 					<p class="txt">"My experience was great... "</p>
 					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
 					<p class="txt">"I'm happy to have discovered... "</p>
 					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 				<br>
 				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
 					<p class="txt">"I came across safe2choose website... "</p>
 					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>				
 					</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 				<br>
 				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
 					<p class="txt">"I decided to terminate my pregnancy... "</p>
 					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
 					</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 				<br>
 				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
 					<p class="txt">"Based on the pregnancy calculation... "</p>
 					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>				
 					</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 				<br>
 				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail center-block" width="200" height="200">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
 					<p class="txt">"One hour after taking the first doses... "</p>
 					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>				
 					</div>
 			</div>
-			<div class="col-sm-12 col-md-12 col-lg-4">
+			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color" id="banner">
 				<div class="col-sm-12 col-md-12 col-lg-12">
 					<h3>Share your story!</h3>
 					<p>Share your experience and help other women understand the process of having a safe abortion with pills. Fill out this form (learn more about our privacy policy).</p>
@@ -102,10 +106,6 @@
 						  <option>Tokyo</option>
 						</select>
 					</div>
-					<div class="form-group">
-					    <label for="photo">Photo</label>
-					    <input type="file" id="photo" lass="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Please upload a photo in one of the following formats: jpg, gif, png. Maximum file size is 4mb. No need to provide a photo of you - it can be an image or graphic that you feel represents you. And if you don't feel like sharing any photo, that's fine too. It's optional!">
-  					</div>
   					<div class="form-group">
   						<label for="message">Message *</label>
   						<textarea class="form-control" rows="3"></textarea>
