--- a/single_testimonial.html
+++ b/single_testimonial.html
@@ -30,11 +30,11 @@
 	<br>
 	<br>
 		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-8" id="banner">
+			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color" id="banner">
 			<br>
 			<br>
 				<div class="col-sm-12 col-md-4 col-lg-4">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-thumbnail" width="200" height="200">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive" width="200" height="200">
 				</div>
 				<div class="col-sm-12 col-md-4 col-lg-8">
 					<p><strong>Name:</strong> Ana pineda</p>
@@ -50,7 +50,7 @@
 					<h2>Date: 11th June, 2016</h2>
 				</div>				
 			</div>
-			<div class="col-sm-12 col-md-12 col-lg-4">
+			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color" id="banner">
 				<div class="col-sm-12 col-md-12 col-lg-12">
 					<h3>Share your story!</h3>
 					<p>Share your experience and help other women understand the process of having a safe abortion with pills. Fill out this form (learn more about our privacy policy).</p>
@@ -73,10 +73,6 @@
 						  <option>Tokyo</option>
 						</select>
 					</div>
-					<div class="form-group">
-					    <label for="photo">Photo</label>
-					    <input type="file" id="photo">
-  					</div>
   					<div class="form-group">
   						<label for="message">Message *</label>
   						<textarea class="form-control" rows="3"></textarea>
@@ -96,8 +92,8 @@
 		<br>
 			<nav aria-label="...">
 	 			<ul class="pager">
-				    <li><a href="single_testimonial.html">Previous</a></li>
-				    <li><a href="single_testimonial.html">Next</a></li>
+				    <li><a href="single_testimonial.html" class="pagination1">Previous</a></li>
+				    <li><a href="single_testimonial.html" class="pagination1">Next</a></li>
 	  			</ul>
 			</nav>
 		</div>
