Spacing size in mobile fixed.

--- a/single_testimonial.html
+++ b/single_testimonial.html
@@ -30,9 +30,7 @@
 	<br>
 	<br>
 		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color" id="banner">
-			<br>
-			<br>
+			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
 				<div class="col-sm-12 col-md-4 col-lg-4">
 					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive" width="200" height="200">
 				</div>
@@ -50,7 +48,7 @@
 					<h2>Date: 11th June, 2016</h2>
 				</div>				
 			</div>
-			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color" id="banner">
+			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color margin-top" id="banner">
 				<div class="col-sm-12 col-md-12 col-lg-12">
 					<h3>Share your story!</h3>
 					<p>Share your experience and help other women understand the process of having a safe abortion with pills. Fill out this form (learn more about our privacy policy).</p>
@@ -98,10 +96,7 @@
 			</nav>
 		</div>
 	</div>
-	<footer>
-	<br>
-	<br>
-	<br>
+	<footer margin-top>
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-12" id="banner">
 				<br>
