--- a/index.html
+++ b/index.html
@@ -26,30 +26,24 @@
 			</div>
 		</div>
 	</header>
-	<br>
-	<br>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-12 border_top_color" id="banner">
+			<div class="col-sm-12 col-md-12 col-lg-12 border_top_color margin-top" id="banner">
 				<h1>Testimonials</h1>
 				<h2>Have you made a safe choice? <span class="pink-message">Share your story!</span></h2>
 				<p>Every day, women all over the world choose to have safe abortions with pills. Some women prefer this method because they feel it is less invasive. Others prefer the method because they can use it in a familiar place, it is less expensive, more private – and safer. Whatever your reason for having an abortion with pills, we would love to hear from you about how it happened.  </p>
 				<p>Why not take five minutes to share your story. It may help other women understand the process and find the courage to choose safely.</p>
 				<h3 class="message">Check out the stories shared by women around the <br> world and by safe2choose’s users!</h3>
 			</div>
-			<div class="col-sm-12 col-md-12 col-lg-12">
-				<br>
-				<br>
-			</div>
-			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color" id="banner">
-			<br>
-			<br>
+			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
 				<div class="col-sm-12 col-md-6 col-lg-6">
 					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
 					<p class="txt">"My experience was great... "</p>
 					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
+				<br>
+				<br>
 					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
 					<p class="txt">"I'm happy to have discovered... "</p>
 					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
@@ -83,7 +77,7 @@
 					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>				
 					</div>
 			</div>
-			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color" id="banner">
+			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color margin-top" id="banner">
 				<div class="col-sm-12 col-md-12 col-lg-12">
 					<h3>Share your story!</h3>
 					<p>Share your experience and help other women understand the process of having a safe abortion with pills. Fill out this form (learn more about our privacy policy).</p>
@@ -121,10 +115,7 @@
 			</div>
 		</div>
 	</div>
-	<footer>
-	<br>
-	<br>
-	<br>
+	<footer class="margin-top">
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-12" id="banner">
 				<br>
