--- a/index.html
+++ b/index.html
@@ -36,46 +36,64 @@
 				<h3 class="message">Check out the stories shared by women around the <br> world and by safe2choose’s users!</h3>
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
+			<div class="row">
 				<div class="col-sm-12 col-md-6 col-lg-6">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
-					<p class="txt">"My experience was great... "</p>
-					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Ana Pineda</strong></p>
+					<p class="txt"><strong>From:</strong> Mexico</p>
+					<p class="txt"><i>"First I would like to give thanks to this website because it helped me when no one else did..."</i></p>
+					<a class="btn btn-default center-block" href="ana_testimonial.html" role="button">Read more!</a>
+					<br>
+					<br>
+				</div>
+				<div class="col-sm-12 col-md-6 col-lg-6">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Sophia Johnson</strong></p>
+					<p class="txt"><strong>From:</strong> USA</p>
+					<p class="txt"><i>"I have never dealt with more caring, understanding and helpful people in all my life..."</i></p>
+					<a class="btn btn-default center-block" href="sophia_testimonial.html" role="button">Read more!</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 col-md-6 col-lg-6">
+				<br>
+				<br>
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Linda Hamilton</strong></p>
+					<p class="txt"><strong>From:</strong> United Kingdom</p>
+					<p class="txt"><i>"When I was worried with an unexpected pregnancy I reached out to safe2choose..."</i></p>
+					<a class="btn btn-default center-block" href="linda_testimonial.html" role="button">Read more!</a>
 				</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 				<br>
 				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
-					<p class="txt">"I'm happy to have discovered... "</p>
-					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Edeltraud Hannelore</strong></p>
+					<p class="txt"><strong>From:</strong> Germany</p>
+					<p class="txt"><i>"My experience was great. I was really scared and desperate and safe2choose staff actually understood..."</i></p>
+					<a class="btn btn-default center-block" href="edeltraud_testimonial.html" role="button">Read more!</a>
 				</div>
+			</div>
+			<div class="row">
 				<div class="col-sm-12 col-md-6 col-lg-6">
 				<br>
 				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
-					<p class="txt">"I came across safe2choose website... "</p>
-					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>				
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Sarabi Bantsimba</strong></p>
+					<p class="txt"><strong>From:</strong> Africa</p>
+					<p class="txt"><i>"I’m happy to have discovered this option and to know that you inform women and care to help; no one..."</i></p>
+					<a class="btn btn-default center-block" href="sarabi_testimonial.html" role="button">Read more!</a>
 					</div>
 				<div class="col-sm-12 col-md-6 col-lg-6">
 				<br>
 				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
-					<p class="txt">"I decided to terminate my pregnancy... "</p>
-					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Kumiko Lee</strong></p>
+					<p class="txt"><strong>From:</strong> China</p>
+					<p class="txt"><i>"I came across Safe2choose website while i was looking for a safe way to end an unwanted pregnancy..."</i></p>
+					<a class="btn btn-default center-block" href="kumiko_testimonial.html" role="button">Read more!</a>
 					</div>
-				<div class="col-sm-12 col-md-6 col-lg-6">
-				<br>
-				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
-					<p class="txt">"Based on the pregnancy calculation... "</p>
-					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>				
-					</div>
-				<div class="col-sm-12 col-md-6 col-lg-6">
-				<br>
-				<br>
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200">
-					<p class="txt">"One hour after taking the first doses... "</p>
-					<button type="button" class="btn btn-default btn-sm center-block"><a href="single_testimonial.html">Read more!</a></button>				
-					</div>
+			</div>
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-3 col-lg-offset-1 border_top_color margin-top" id="banner">
 				<div class="col-sm-12 col-md-12 col-lg-12">
@@ -109,7 +127,7 @@
 				          <input type="checkbox"> I agree to share my story on safe2choose.org
 				        </label>
       				</div>
-      				<button type="submit" class="btn btn-primary">Submit</button>
+      				<button type="submit" class="btn btn-primary center-block">Submit</button>
 				</form>
 				</div>
 			</div>
