Updates on each testimonial page

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			<div class="col-sm-12 col-md-12 col-lg-12 border_top_color margin-top" id="top-txt">
 				<h1>Testimonials</h1>
 				<h2>Have you made a safe choice? <span class="message">Share your story!</span></h2>
-				<p><strong>Every day, women all over the world choose to have safe abortions with pills. Some women prefer this method because they feel it is less invasive. Others prefer the method because they can use it in a familiar place, it is less expensive, more private – and safer. Whatever your reason for having an abortion with pills, we would love to hear from you about how it happened.</strong></p>
-				<p><strong>Why not take five minutes to share your story. It may help other women understand the process and find the courage to choose safely.</strong></p>
+				<p class="txt-justify"><strong>Every day, women all over the world choose to have safe abortions with pills. Some women prefer this method because they feel it is less invasive. Others prefer the method because they can use it in a familiar place, it is less expensive, more private – and safer. Whatever your reason for having an abortion with pills, we would love to hear from you about how it happened.</strong></p>
+				<p class="txt-justify"><strong>Why not take five minutes to share your story. It may help other women understand the process and find the courage to choose safely.</strong></p>
 				<h3 class="message">Check out the stories shared by women around the <br> world and by safe2choose’s users!</h3><br>
 			</div>
 			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
