--- a/sarabi_testimonial.html
+++ b/sarabi_testimonial.html
@@ -31,26 +31,25 @@
 	<br>
 		<div class="row">
 			<div class="col-sm-12 col-md-12 col-lg-8 border_top_color margin-top" id="banner">
-				<div class="col-sm-12 col-md-4 col-lg-4 txt-size">
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-lg-push-4 col-md-push-4 txt-size">
+					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
+					<p class="txt"><strong>Sarabi Bantsimba, </strong>25</p>
+					<p class="txt"><i>South Africa</i></p>
+				</div>
+				<div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 col-lg-pull-4 col-md-pull-4 txt-size">
 				<div class="pagination1">
 					<nav aria-label="...">
 			 			<ul class="pager">
-						    <li><a href="Kumiko_testimonial.html" class="pagination1">Kumiko's testimonial</a></li>
+						    <li><a href="edeltraud_testimonial.html" class="pagination1"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Edeltraud's testimonial</a></li>
 			  			</ul>
 					</nav>
 				</div>	
 				</div>
-				<div class="col-sm-12 col-md-4 col-lg-4 txt-size">
-					<img src="http://wallpaperrs.com/uploads/girls/happy-woman-wide-wallpaper-19413.jpg" class="img-responsive center-block" width="200" height="200"><br>
-					<p class="txt"><strong>Name:</strong> Sarabi Bantsimba</p>
-					<p class="txt"><strong>Age:</strong> 32</p>
-					<p class="txt"><strong>Country:</strong> South Africa</p>
-				</div>
-				<div class="col-sm-12 col-md-4 col-lg-4 txt-size">
+				<div class="col-xs-6 scol-sm-6 col-md-4 col-lg-4 txt-size">
 				<div class="pagination1">
 					<nav aria-label="...">
 			 			<ul class="pager">
-						    <li><a href="sophia_testimonial.html" class="pagination1">Sophia's testimonial</a></li>
+						    <li><a href="kumiko_testimonial.html" class="pagination1">Kumiko's testimonial <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a></li>
 			  			</ul>
 					</nav>
 				</div>	
