--- a/ana_testimonial.html
+++ b/ana_testimonial.html
@@ -94,7 +94,7 @@
 				          <input type="checkbox"> I agree to share my story on safe2choose.org
 				        </label>
       				</div>
-      				<button type="submit" class="btn btn-primary center-block">Submit</button>
+      				<button type="submit" class="btn btn-primary center-block mobile-size">Submit</button>
 				</form>
 				</div>
 			</div>
